WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197451
REGRESSION (
r244182
): RenderingUpdate should not be scheduled for invisible pages
https://bugs.webkit.org/show_bug.cgi?id=197451
Summary
REGRESSION (r244182): RenderingUpdate should not be scheduled for invisible p...
Said Abou-Hallawa
Reported
2019-04-30 18:18:54 PDT
Safari creates a blank web page when it is opened. This page will not be visible unless the user selects to open new tabs with "Empty page". The loader of this page forces Document::resolveStyle() which requires RenderLayerCompositor::scheduleLayerFlushNow(). Before
r244182
, this would just call scheduleCompositingLayerFlush() immediately. After
r244182
, RenderLayerCompositor::scheduleLayerFlushNow() has to schedule a RenderingUpdate and when it fires it calls scheduleCompositingLayerFlush(). We need to optimize this case by checking whether the page is visible or not before scheduling the RenderingUpdate.
Attachments
Patch
(6.40 KB, patch)
2019-04-30 18:28 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(6.61 KB, patch)
2019-05-01 10:26 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2019-04-30 18:28:49 PDT
Created
attachment 368642
[details]
Patch
Said Abou-Hallawa
Comment 2
2019-05-01 10:26:39 PDT
Created
attachment 368684
[details]
Patch
Said Abou-Hallawa
Comment 3
2019-05-01 10:30:05 PDT
<
rdar://problem/50224329
>
WebKit Commit Bot
Comment 4
2019-05-01 12:31:11 PDT
Comment on
attachment 368684
[details]
Patch Clearing flags on attachment: 368684 Committed
r244837
: <
https://trac.webkit.org/changeset/244837
>
WebKit Commit Bot
Comment 5
2019-05-01 12:31:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug